Testing #skills Image Issue
The top of the image in the skills section is black. Trying to position
the image to the top to avoid it not covering the page.

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@
  * =================================================================== */
 
  .section-image {
- 	background: #151515 url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?dpr=2&auto=compress,format&crop=entropy&fit=crop&w=1199&h=799&q=80) no-repeat center right;
+ 	background: #151515 url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?dpr=2&auto=compress,format&crop=entropy&fit=crop&w=1199&h=799&q=80) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -370,6 +370,11 @@ footer p {
     footer {
         text-align: center;
         padding-bottom: 100px;
+    }
+
+    #skills {
+        background: #151515 url(https://images.unsplash.com/photo-1456983933114-c22026990f4b?dpr=2&auto=format&crop=entropy&fit=crop&w=1280&h=720&q=80) no-repeat center center;
+        background-position: top center;
     }
 }
 
